--- a/client/message.html
+++ b/client/message.html
@@ -1,4 +1,5 @@
 <template name="message">
+    {{#if me}}
     <li class="message right clearfix">
         <span class="chat-img pull-right">
             <img src="{{gravatar}}" alt="User Avatar" class="img-circle" />
@@ -6,11 +7,27 @@
         <div class="chat-body clearfix">
             <div class="header">
                 <small class="text-muted">
-                    <span class="glyphicon glyphicon-time"></span> {{ago timestamp}}
+                    <span class="glyphicon glyphicon-time"></span> {{ago timestemp}}
                 </small>
                 <strong class="pull-right primary-font">{{usr}}</strong>
             </div>
             <p>{{msg}}</p>
         </div>
     </li>
+    {{else}}
+    <li class="message left clearfix">
+            <span class="chat-img pull-left">
+                <img src="{{gravatar}}" alt="User Avatar" class="img-circle" />
+            </span>
+            <div class="chat-body clearfix">
+                <div class="header">
+                    <strong class="pull-left primary-font">{{usr}}</strong>
+                    <small class="text-muted">
+                        <span class="glyphicon glyphicon-time"></span> {{ago timestemp}}
+                    </small>
+                </div>
+                <p>{{msg}}</p>
+            </div>
+        </li>
+    {{/if}}
 </template>
