--- a/client/message.html
+++ b/client/message.html
@@ -11,7 +11,7 @@
                 </small>
                 <strong class="pull-right primary-font">{{usr}}</strong>
             </div>
-            <p>{{msg}}</p>
+            <p>{{msg}} {{#if isClient}} - Sending...{{/if}}</p>
         </div>
     </li>
     {{else}}
